@@ -1,19 +1,0 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/locale-maketext-lexicon/Attic/locale-maketext-lexicon-0.27.ebuild,v 1.1 2003/07/29 14:48:30 mcummings Exp $
-
-inherit perl-module
-
-MY_P=Locale-Maketext-Lexicon-${PV}
-S=${WORKDIR}/${MY_P}
-
-DESCRIPTION="Use other catalog formats in Maketext"
-SRC_URI="http://www.cpan.org/authors/id/A/AU/AUTRIJUS/${MY_P}.tar.gz"
-HOMEPAGE="http://www.cpan.org/authors/id/A/AU/AUTRIJUS/"
-SLOT="0"
-LICENSE="Artistic | GPL-2"
-KEYWORDS="~x86 ~amd64 ~ppc ~sparc ~alpha ~hppa"
-
-DEPEND="${DEPEND}
-		dev-perl/locale-maketext
-		dev-perl/regexp-common"
