@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/locale-maketext-lexicon
 # Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.2 2003/12/30 17:26:26 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/locale-maketext-lexicon/ChangeLog,v 1.3 2003/12/30 17:27:15 mcummings Exp $
+
+  30 Dec 2003; Michael Cummings,,, <mcummings@gentoo.org>
+  locale-maketext-lexicon-0.27.ebuild:
+  No longer available on CPAN
 
 *locale-maketext-lexicon-0.32 (30 Dec 2003)
 
